<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item

        android:id="@+id/tasksFragment"
        android:enabled="true"
        android:icon="@drawable/ic_task"
        android:title="@string/bot_nav_action_1"/>
    <item
        android:id="@+id/scheduleFragment"
        android:enabled="true"
        android:icon="@drawable/ic_schedule"
        android:title="@string/bot_nav_action_2"/>
    <item
        android:id="@+id/chatFragment"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/bot_nav_action_3"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/bot_nav_action_4"/>
</menu>