<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzl_regular"
        android:text="@string/incident_subtitle_text"
        android:textColor="@color/dark"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_below="@id/tvSubtitle"
        android:layout_marginTop="12dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/shape_task_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/problem_address_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/problem_way_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/problem_loading_goods_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_save_text"
        android:textColor="@color/middle_gray_blue"
        android:textSize="16sp"
        app:shapeAppearanceOverlay="@style/shape_btn_continue" />
</RelativeLayout>