<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:id="@+id/llLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/contentdescription"
            android:src="@drawable/ic_bia_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/stolzl_bold"
            android:text="@string/title_auth_tv"
            android:textColor="@color/dark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLogo"
        android:layout_marginTop="76dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_regular"
            android:text="@string/welcome_text_auth_tv"
            android:textColor="@color/dark"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/stolzl_book"
            android:text="@string/enter_number_tv"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/style_til_phone"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_til_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/style_et_phone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinueMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_continue_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:shapeAppearanceOverlay="@style/shape_btn_continue" />
</RelativeLayout>