<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/shape_task_item"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/stolzl_regular"
            android:text="Мебель"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nameTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_book"
            android:text="Текущее задание"
            android:textColor="@color/dark"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/stolzl_book"
        android:text="11.08.2023 * 12:00"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_stock"
        android:orientation="vertical"
        android:paddingVertical="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_book"
            android:text="Склад 51, Ул. Пушкина 124Б"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/stolzl_book"
            android:text="Склад 38, Ул. Розенбаума 89"
            android:textColor="@color/dark"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/stolzl_book"
            android:text="@string/order_details_tv"
            android:textColor="@color/bia_gray_color_1"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/stolzl_book"
            android:text="Прописанные детали заказа"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/stolzl_book"
            android:text="@string/payment_parameters_tv"
            android:textColor="@color/bia_gray_color_1"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/stolzl_book"
            android:text="Прописанные параметры по оплате"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/dark"
            android:text="@string/btn_show_details_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:shapeAppearanceOverlay="@style/shape_btn_continue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWorkFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_stock"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="15.5dp"
        android:visibility="gone">

        <TextView
            style="@style/style_text_14.Regular"
            android:text="@string/work_finished_tv"
            android:textColor="@color/green_status" />

        <TextView
            style="@style/style_text_14.Regular"
            android:layout_marginTop="4dp"
            android:text="@string/desc_work_finished_tv"
            android:textColor="@color/dark_gray" />
    </LinearLayout>
</LinearLayout>